# inde577-machine-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/supervised_learning/: 01_linear_regression.ipynb  02_logistic_regression.ipynb  03_knn.ipynb  04_perceptron.ipynb  05_mlp.ipynb  06_decision_tree.ipynb  07_random_forest.ipynb  08_gradient_boosting.ipynb  09_svm.ipynb  10_naive_bayes.ipynb  README.md
notebooks/unsupervised_learning/: 11_kmeans.ipynb  12_dbscan.ipynb  13_pca.ipynb  14_hierarchical.ipynb  README.md
src/rice_ml/: __init__.py
src/rice_ml/processing/: __init__.py  metrics.py  preprocessing.py
src/rice_ml/supervised_learning/: __init__.py  decision_tree.py  gradient_boosting.py  knn.py  linear_regression.py  logistic_regression.py  mlp.py  naive_bayes.py  perceptron.py  random_forest.py  svm.py
src/rice_ml/unsupervised_learning/: __init__.py  dbscan.py  hierarchical.py  kmeans.py  pca.py
tests/unit/: test_dbscan.py  test_decision_tree.py  test_gradient_boosting.py  test_hierarchical.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_mlp.py  test_naive_bayes.py  test_pca.py  test_perceptron.py  test_preprocessing.py  test_random_forest.py  test_svm.py
