[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "A custom ML library for INDE 577 / CMOR 438 at Rice University"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0",
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
    "seaborn>=0.11.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
